--- a/package.json
+++ b/package.json
@@ -38,16 +38,16 @@
     "minimumXpmRequired": "0.10.2",
     "binaries": {
       "destination": "./.content",
-      "baseUrl": "https://github.com/tfh-cri/clang-xpack/releases/download/test/",
+      "baseUrl": "https://github.com/tfh-cri/clang-xpack/releases/download/v14.0.6-2",
       "skip": 1,
       "platforms": {
         "linux-x64": {
           "fileName": "xpack-clang-14.0.6-2-linux-x64.tar.gz",
-          "sha256": "870f37ef9996599bc660dd2f9247ffb235c38c6fe831c41129d5258d6fb86770"
+          "sha256": "3c002f31d3f9d4cd0fd17b9cac3a8703b7408a74c5efac90a0b14b51b71da716"
         },
         "win32-x64": {
           "fileName": "xpack-clang-14.0.6-2-win32-x64.zip",
-          "sha256": "5294b6a3338e179381d722703771d2c2f165c6c9ba897af663bce746fd6c7589"
+          "sha256": "2f7810861d12c1dfa13f29ff9a898882b269b9ee54b18fc5c272b4e44c6c6f4c"
         }
       }
     },
